--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link href="style.css" rel="stylesheet" /> 
     <title>Nyan Cat</title>
 </head>
 <body>
-    
+    <div class="maincontainer" id="container">
+        <button type="button" class="btn btn-primary btn-lg" id="NyanCat">
+            Nyan Cat
+        </button>
+    </div>
+    <script>
+        var container = document.getElementById('container');
+        var button = document.getElementById('NyanCat');
+        var i=0;
+        button.addEventListener("click" , addImages);
+        function addImages(){
+
+            setTimeout(function () { 
+            var nyanCatImage = document.createElement('img');
+            nyanCatImage.src="cat.png";
+            nyanCatImage.className="catImage";
+            container.appendChild(nyanCatImage);
+            button.style.display="none";
+            document.body.style.backgroundImage="url('bg-container.png')";
+            // for random rotate
+            // var number = Math.floor((Math.random() * 100));
+            // nyanCatImage.style.transform = "rotate(" + number + "deg)";
+            i++; 
+            if(i<1000){
+                 addImages();
+            }
+            }, 1000)
+        }
+
+        
+    </script>
 </body>
 </html>
